
- jEdit now remembers if more than one view was open, and if the view
  was split.

}}}
{{{ Scripting

- BeanShell scripts now preset the 'wm' variable to
  view.getDockableWindowManager(). Useful for actions.xml.

}}}
{{{ Miscellaneous

- Symbolic links are no longer resolved in buffer path names. Opening
  two buffers both pointing to the same file on disk is still not
  allowed.

}}}
{{{ Command Line

- Added a few new command line parameters, documented in jedit -usage:

  -gui
  -newplainview
  -newview
  -nobackground
  -plugins
  -quit
  -restore
  -reuseview
  -startupscripts
  -wait

}}}
{{{ Optimizations

- Faster buffer loading.

- Faster activity log.

- Bracket matching is now only performed 200ms after the last caret
  movement. This should solve the problem of annoyingly slow response
  when eg, inserting a number of characters before an unclosed bracket
  near the beginning of a large source file.

- Bracket matching now only scans up to 10,000 lines.

- Consecutive "chunks" with the same style attributes were previously
  merged when a line was being painted, for improved performance. Now we
  take this one step further and merge them when putting a line's chunk
  list in the cache. This should improve scrolling performance,
  especially when smooth text is on.

- jEdit now performs much better when very long lines are present in a
  buffer.

- A funky little display optimization with monospaced fonts is now
  performed. In jEdit 4.1 this could be enabled with a hidden property,
  but now we detect if a monospaced font is actually in use.

- Faster line insertion and removal when there are collapsed folds below
  the insertion point.

- Faster painting of tokens with background colors. Previously if tokens
  defined a background color, there was a noticable lag when scrolling
  for example (at least with Java 1.4.1 on Linux). This no longer
  happends.

- Faster buffer transactions if both soft wrap and narrowing is active.
